# finvizor_rust

./: Cargo.toml  LICENSE  html_one_page.txt
src/: lib.rs
src/configs/: ticker_data_getter.toml
src/fetcher/: fetcher.rs  fetcher_if.rs
src/filtering/: dividend_filter.rs  filter_if.rs  pb_filter.rs
src/next_page_getter/: next_page_getter.rs
src/scraper/: fetcher.rs  fetcher_if.rs  next_page_getter.rs  scrape.rs  ticker_parser.rs  ticker_parser_if.rs
src/stock_data_scraper/: data_parser.rs  data_parser_if.rs  page_getter.rs  page_getter_if.rs  scrape_ticker_data.rs
src/stock_related_types/: floating_point.rs  security.rs  ticker_data.rs
src/string_manipulation/: string_manipulation.rs
src/tests/: compound_filter_test.rs  data_parser_test.rs  dividend_filter_test.rs  floating_point_test.rs  html_one_page.html  next_page_getter_test.rs  page_getter_test.rs  pb_filter_test.rs  scrape_ticker_data_test.rs  ticker_data_parser_test.rs  ticker_parser_test.rs
src/ticker_data/: ticker_data.rs
src/ticker_data_scraper/: data_scrape.rs  next_page_getter.rs  ticker_data_parser.rs  ticker_data_parser_if.rs
src/ticker_file_reader/: ticker_file_reader.rs
src/ticker_scraper/: next_page_getter.rs  next_page_getter_if.rs  scrape.rs  ticker_parser.rs
