[package]
name = "finvizor_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
log = "0.4"
env_logger = "0.9"
async-trait = "0.1"
scraper = "0.18"
tokio = { version = "1", features = ["full"] } # Only if you want async (optional)
once_cell = "1.19"
regex = "1.11.1"
mockall = "0.12"

[[bin]]
name = "ticker_getter"
path = "src/bin/ticker_getter.rs"

[[bin]]
name = "ticker_data_getter"
path = "src/bin/ticker_data_getter.rs"